Removed 'forkme' banner. Reworded GH footer comment.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -35,7 +35,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/B-Con/mute">View on GitHub</a>
+          <!-- <a id="forkme_banner" href="https://github.com/B-Con/mute">View on GitHub</a> -->
 
           <h1 id="project_title">Mute</h1>
           <h2 id="project_tagline">Mute is an AdBlock filter for hiding user comments. Surf without the noise.</h2>
@@ -96,7 +96,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Mute maintained by <a href="https://github.com/B-Con">B-Con</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Design adapted from <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
