Re-enabled tracking for normal site operations.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,7 +26,7 @@
 		downloadLink.onmouseup = function(){ return logDownload('Link'); }
 	  }
 
-	  //window.onload = setLogging;
+	  window.onload = setLogging;
 	</script>
   </head>
 
@@ -126,7 +126,6 @@ Contributions to the filter set are welcome. See the <a href="https://github.com
 	</div>
   </footer>
 
-<!--
     <script type="text/javascript">
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-35982763-3']);
@@ -138,6 +137,6 @@ Contributions to the filter set are welcome. See the <a href="https://github.com
 	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	  })();
 	</script>
--->
+
   </body>
 </html>
