Added text comparing mute filter to existing AdBlock behavior.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,7 +62,7 @@ Who hasn't innocently started to read the user comments on a newspaper article, 
 </p>
 
 <p>
-<strong>Mute</strong> is an AdBlock Plus filter for user comments. It transparently hides user-generated comments so you can browse the Internet with less stupidity clawing at your eyeballs.
+<strong>Mute</strong> is an AdBlock Plus filter for user comments. In the same way that AdBlock hides ads, AdBlock can use this filter to hide user-generated comments, allowing you to browse the Internet with less stupidity clawing at your eyeballs.
 </p>
 
 <p>
