Changed footer text colors. Changed page title. Added disclaimer section. Moved 'view comments' section to an h2.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
 
-    <title>Mute</title>
+    <title>Mute - An AdBlock filter for comments</title>
 
 	<script type="text/javascript">
 	  function logDownload(downloadMethod)
@@ -85,20 +85,20 @@ Add the Mute filter to AdBlock using <a id="install-link" href="abp:subscribe?lo
   <li>At the bottom, choose a subscription title like "Mute Comments" and enter the following into the filter list location: <code>http://mute.bradconte.com/mute.txt</code></li>
 </ol>
 
-<h3 id="view-blocked">What if I ever want to view blocked comments?</h3>
+<h2 id="view-blocked">What if I want to view blocked comments?</h2>
 
 <p>
 Disabling AdBlock will disable this filter as well. You can disable AdBlock a specific page or an entire site.
 </p>
 
 <p>
-You can also remove this filter at any time by going into AdBlock and selecting "Filter Preferences > Mute > Actions > Delete".
+You can also remove this filter at any time by going into AdBlock and selecting "Filter Preferences &gt; Mute &gt; Actions &gt; Delete".
 </p>
 
 <h2 id="contribute">Contribute</h2>
 
 <p>
-The filter isn't perfect. Short-comings of the filter are tracked through the project's <a href="https://github.com/B-Con/mute/issues">GitHub issue tracker</a>. Everyone is encouraged to add problems that they find with the filter. Create an issue there if:
+The filter isn't perfect. Short-comings are tracked through the project's <a href="https://github.com/B-Con/mute/issues">GitHub issue tracker</a>. Everyone is encouraged to use it to report problems. Create an issue there if:
 </p>
 
 <ul>
@@ -107,11 +107,17 @@ The filter isn't perfect. Short-comings of the filter are tracked through the pr
 </ul>
 
 <p>
-and we'll investigate how to fix it. When submitting an issue, you only need to specify the URL with the comment problem (not just the site name or domain, the full URL) and preferably which browser you were using.
+and we'll investigate it. When submitting an issue, you only need to specify the URL with the problem (not just the site name or domain, the full URL) and preferably which browser you were using.
 </p>
 
 <p>
-Contributions to the filter set are welcome. See the <a href="https://github.com/B-Con/mute">GitHub repository</a>.
+Direct contributions to the filter are welcome. See the <a href="https://github.com/B-Con/mute">GitHub repository</a>.
+</p>
+
+<h2 id="disclaimer">Disclaimer</h2>
+
+<p>
+In concept, Mute is a list of heuristics for hiding content. Due to this, bugs in Mute may cause problems such as, but not limited to, improperly rendered web pages and improperly hidden content on web pages. Mute does not claim to be 100% accurate. Use Mute at your own risk.
 </p>
 
   </div>
