Changed footer link. Added top/bottom padding to main content.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -126,7 +126,7 @@ In concept, Mute is a list of heuristics for hiding content. Due to this, bugs i
   <!-- FOOTER -->
   <footer>
 	<div class="inner">
-	  <p class="copyright">Mute is by <a href="http://bradconte.com">Brad Conte</a>.</p>
+	  <p class="copyright">Mute is by <a href="http://bradconte.com/about">Brad Conte</a>.</p>
 	  <p>Site design adapted from <a href="http://pages.github.com">GitHub Pages</a>. Logo in part from <a href="http://openclipart.org/detail/169033/windows-mute-icon-by-mightyman">Open Clipart</a>.</p>
 	  <p>This project is not officially associated with or endorsed by AdBlock Plus.</a>
 	</div>
