Adjusted padding for H2s and for main body. Added formating for <code> tags.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -111,7 +111,7 @@ and we'll investigate it. When submitting an issue, you only need to specify the
 </p>
 
 <p>
-Direct contributions to the filter are welcome. See the <a href="https://github.com/B-Con/mute">GitHub repository</a>.
+Direct contributions to the filter's rule set are welcome. See the <a href="https://github.com/B-Con/mute">GitHub repository</a>.
 </p>
 
 <h2 id="disclaimer">Disclaimer</h2>
